--- a/src/app/domains/products/pages/product-detail/product-detail.component.html
+++ b/src/app/domains/products/pages/product-detail/product-detail.component.html
@@ -10,7 +10,14 @@
       <div class="flex items-center justify-center mt-1">
         <div class="grid grid-cols-3 gap-1">
           @for (img of product()?.images; track img) {
-  <img
+  
+  <button
+   (click)="changeCover(img)"
+    (keyup.enter)="changeCover(img)"
+    class="focus:outline-none"
+  
+  >
+    <img
             alt="ecommerce"
             class="object-cover object-center rounded border-2 border-gray-200"
 
@@ -18,6 +25,9 @@
             (click)="changeCover(img)"
             [class.border-red-400]="img === cover()"
           />
+
+  </button>
+            
 }
         </div>
       </div>
