--- a/src/app/domains/products/pages/product-detail/product-detail.component.html
+++ b/src/app/domains/products/pages/product-detail/product-detail.component.html
@@ -1,15 +1,18 @@
-<div class="w-full flex flex-col md:flex-row md:space-x-10">
+@let data = product();
+@if (data) {
+
+  <div class="w-full flex flex-col md:flex-row md:space-x-10">
   <div class="flex flex-col w-full md:w-1/3">
     <div class="w-full rounded border border-gray-200">
       <img
         alt="ecommerce"
         class="w-full object-cover object-center"
-        [src]="cover()"
+        [ngSrc]="cover()"
       />
     </div>
     <div class="flex items-center justify-center mt-1">
       <div class="grid grid-cols-3 gap-1">
-        @for (img of product()?.images; track img) {
+        @for (img of data.images; track img) {
           <button
             (click)="changeCover(img)"
             (keyup.enter)="changeCover(img)"
@@ -18,7 +21,7 @@
             <img
               alt="ecommerce"
               class="object-cover object-center rounded border-2 border-gray-200"
-              [src]="img"
+              [ngSrc]="img"
               [class.border-red-400]="img === cover()"
             />
           </button>
@@ -28,16 +31,16 @@
   </div>
   <div class="mt-5 w-full">
     <h2 class="text-sm title-font text-gray-500 tracking-widest">
-      {{ product()?.category?.name | uppercase }}
+      {{ data.category.name | uppercase }}
     </h2>
     <h1 class="text-gray-900 text-3xl title-font font-medium mb-1">
-      {{ product()?.title }}
+      {{ data?.title }}
     </h1>
     <p class="leading-relaxed">
-      {{ product()?.description }}
+      {{ data.description }}
     </p>
     <p class="title-font font-medium text-2xl text-gray-900 mt-5">
-      {{ product()?.price | currency: "$" : "symbol" : "1.0" }}
+      {{ data.price | currency: "$" : "symbol" : "1.0" }}
     </p>
     <button
       (click)="addToCart()"
@@ -47,3 +50,7 @@
     </button>
   </div>
 </div>
+}
+
+
+
