--- a/src/app/domains/info/pages/about/about.component.html
+++ b/src/app/domains/info/pages/about/about.component.html
@@ -10,10 +10,20 @@
   <p>
     <input [(ngModel)]="duration" type="range" min="0" max="1000"/>
   </p>
+  <p>
+    Parent message: {{ message() }}
+  </p>
    @if (duration() > 0) {
-      <app-counter [duration]="duration()" [message]="message()" />
+      <app-counter [duration]="duration()" [(message)]="message" />
     }
   <div>
     <app-wave-audio audioUrl="assets/audio.mp3" />
   </div>
+
+  <p>with init: {{ $withInit() }}</p>
+   <button class="bg-blue-500 text-white px-4 py-2 rounded-md" (click)="emitWithInit()">emit with init</button>
+
+  <p>without init: {{ $withoutInit() }}</p>
+  <button class="bg-blue-500 text-white px-4 py-2 rounded-md" (click)="emitWithoutInit()">emit without init</button>
+
 </div>
