--- a/src/app/domains/products/components/product/product.component.html
+++ b/src/app/domains/products/components/product/product.component.html
@@ -1,20 +1,19 @@
 @let data = product();
 
-
 <div class="group rounded-lg border">
   <a
     [routerLink]="['/product', data.slug]"
-    class="w-full overflow-hidden rounded-t-lg bg-gray-200">
+    class="w-full overflow-hidden rounded-t-lg bg-gray-200"
+  >
     <div class="relative h-80">
       <img
-          [ngSrc]="data.images[0]"
-          [alt]="data.title"
-          [fill]="true"
-          loading="lazy"
-          class="h-full w-full object-cover object-center group-hover:opacity-75"
-        />
+        [ngSrc]="data.images[0]"
+        [alt]="data.title"
+        [fill]="true"
+        loading="lazy"
+        class="h-full w-full object-cover object-center group-hover:opacity-75"
+      />
     </div>
-  
   </a>
   <div class="flex flex-col space-y-2 p-4">
     <h3 class="text-sm text-gray-700">{{ data.title }}</h3>
