--- a/src/app/domains/products/pages/list/list.component.html
+++ b/src/app/domains/products/pages/list/list.component.html
@@ -1,20 +1,23 @@
 <div class="flex mt-5 flex-col md:flex-row md:space-x-4">
   <div class="w-full mb-4 md:w-56">
     <p>status: {{ categoriesResource.isLoading() }}</p>
-    <button 
-        class="bg-blue-500 text-white px-4 py-2 rounded-md"
-        (click)="reloadCtegories()">
-        Reload categories
-    </button>
-    <button 
-        class="bg-blue-500 text-white px-4 py-2 rounded-md"
-        (click)="resetCategories()">
-        Reset categories
+    <button
+      class="bg-blue-500 text-white px-4 py-2 rounded-md"
+      (click)="reloadCtegories()"
+    >
+      Reload categories
     </button>
     <button
-        class="bg-blue-500 text-white px-4 py-2 rounded-md"
-        (click)="reloadProducts()">
-        Reload products
+      class="bg-blue-500 text-white px-4 py-2 rounded-md"
+      (click)="resetCategories()"
+    >
+      Reset categories
+    </button>
+    <button
+      class="bg-blue-500 text-white px-4 py-2 rounded-md"
+      (click)="reloadProducts()"
+    >
+      Reload products
     </button>
     <ul class="text-center md:text-left">
       <li>
