--- a/src/app/domains/products/pages/product-detail/product-detail.component.html
+++ b/src/app/domains/products/pages/product-detail/product-detail.component.html
@@ -53,4 +53,12 @@
       </button>
     </div>
   </div>
+
+  <div class="mt-80"></div>
+
+  @defer (on viewport) {
+    <app-related [slug]="data.slug" />
+  } @placeholder {
+    <p>Loading...</p>
+  }
 }
